--- a/Shop/src/app/shared/main-layout/main-layout.component.html
+++ b/Shop/src/app/shared/main-layout/main-layout.component.html
@@ -2,19 +2,20 @@
   <h2>Online Shop</h2>
   <ul>
       <li routerLinkActive="active">
-        <a href="#">Phone</a>
+        <a (click)="setType('Phone')">Phone</a>
       </li>
       <li routerLinkActive="active">
-        <a href="#">Tablet</a>
+        <a (click)="setType('Tablet')">Tablet</a>
       </li>
       <li routerLinkActive="active">
-        <a href="#">Laptop</a>
+        <a (click)="setType('Laptop')">Laptop</a>
       </li>
       <li routerLinkActive="active">
-        <a [routerLink]="['/card']">Call</a>
+        <a (click)="setType('Card')"[routerLink]="['/card']">Card</a>
       </li>
-
-
   </ul>
 </nav>
-<router-outlet></router-outlet>
+
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
