--- a/Shop/src/app/admin/dashboard/dashboard.component.html
+++ b/Shop/src/app/admin/dashboard/dashboard.component.html
@@ -1,1 +1,41 @@
-<p>dashboard works!</p>
+<div *ngIf="products.length; else loading">
+  <h2 class="text-center">Dashboard of products</h2>
+
+  <div class="form-control">
+    <input type="text" placeholder="Find a product..." [(ngModel)]="productName">
+  </div>
+
+  <table>
+    <thead>
+      <tr>
+        <th>ID</th>
+        <th>Name</th>
+        <th>Price</th>
+        <th>Date of creation</th>
+        <th>Open</th>
+        <th>Delete</th>
+      </tr>
+    </thead>
+
+    <tbody>
+      <tr *ngFor="let product of products | search : productName; let i = index">
+        <td>{{i+1}}</td>
+        <td>{{product.title}}</td>
+        <td>{{product.price}}</td>
+        <td>{{product.date | date : 'medium'}}</td>
+        <td>
+          <button class="btn-dark btn" [routerLink]="['/admin','product',product.id,'edit']">Open</button>
+        </td>
+        <td>
+          <button class="btn-danger btn" (click)="remove(product.id)">Delete</button>
+        </td>
+
+      </tr>
+    </tbody>
+  </table>
+</div>
+
+<ng-template #loading>
+  <p class="text-center">Loading...</p>
+</ng-template>
+
