--- a/Shop/src/app/card-page/card-page.component.html
+++ b/Shop/src/app/card-page/card-page.component.html
@@ -1,1 +1,66 @@
-<p>card-page works!</p>
+<div class="container" *ngIf="cardProducts.length; else empty">
+  <h2 class="text-center">Your order:</h2>
+
+  <table>
+    <tbody>
+    <tr *ngFor="let cardProduct of cardProducts; let i = index">
+      <td>{{cardProduct.type}}</td>
+      <td>{{cardProduct.title}}</td>
+      <td>
+        <button class="btn-danger btn" (click)="delete(cardProduct)"> Delete</button>
+      </td>
+      <td>{{cardProduct.price}} $</td>
+    </tr>
+    </tbody>
+  </table>
+  <hr>
+  <b class="right">Total: {{totalPrice}} $</b>
+
+  <h2 class="text-center">Delivery:</h2>
+
+  <div *ngIf="added" class="text-center text-success">{{added}}</div>
+
+  <form [formGroup]="form" (ngSubmit)="submit()">
+
+    <div class="form-control">
+      <label for="name">Name</label>
+      <input type="name" formControlName="name" id="name">
+      <div *ngIf="form.get('name').touched && form.get('name').invalid" class='validation'>
+        <small *ngIf="form.get('name').errors.required">Enter your name</small>
+      </div>
+    </div>
+
+    <div class="form-control">
+      <label for="phone">Phone Number</label>
+      <input type="phone" formControlName="phone" id="phone">
+      <div *ngIf="form.get('phone').touched && form.get('phone').invalid" class='validation'>
+        <small *ngIf="form.get('phone').errors.required">Enter your phone number</small>
+      </div>
+    </div>
+
+    <div class="form-control">
+      <label for="address">Address</label>
+      <input type="address" formControlName="address" id="address">
+      <div *ngIf="form.get('address').touched && form.get('address').invalid" class='validation'>
+        <small *ngIf="form.get('address').errors.required">Enter your address</small>
+      </div>
+    </div>
+
+    <div class="form-control">
+      <label for="payment">Payment method</label>
+      <select formControlName="payment">
+        <option value="Cash">Cash</option>
+        <option value="Card">Card</option>
+      </select>
+    </div>
+
+    <button type="submit" class="btn btn-primary btn-block" [disabled]="form.invalid || submitted">ADD PRODUCT</button>
+
+  </form>
+
+
+</div>
+
+<ng-template #empty>
+  <h2 class="text-center">Card is empty, select produst</h2>
+</ng-template>
